Filename: changelog.txt

1395460800 - Fixed a bug on displaying users when Modify Same User Level is either turned on or off. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/controllers/go_user_ce.php
           - * application/models/gouser.php
           - * application/views/go_user/go_user_listall_ce.php

           - Fixed a bug when displaying list of campaigns when viewing reports page. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected File:
           - * application/models/go_reports.php

1395374400 - Added the option to change the default time on the damin UI header by changing the Default Local GMT from the system settings. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/views/go_systemsettings/index.php
           - * application/views/includes/go_dashboard_header_jsloader.php
           - * js/go_systemsettings/go_settings_ce.js

1395288000 - Fixed some permission/limitation when setting up a new level 9 user which is not on the ADMIN user group. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/views/includes/go_menu.php
           - * application/views/go_settings/go_phone_list.php
           - * application/views/go_settings/go_phone_view.php

           - Fixed an error where creating a new user will not set the right permissions/access. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/models/go_access.php

1395028800 - Added a feature where when you add a new admin and you set the Modify Same User Level to No. That user/admin will not be able to modify/view other user logins with the same user level. -- Chris Lomuntad <chris@goautodial.com>
           - * Affected Files:
           - * application/controllers/go_user_ce.php
           - * application/views/go_user/go_user_main_ce.php
           - * js/go_user/go_user_ce.js